refactored permutation to growing strategy